envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # Route all authentication and profile traffic to the User Service
                        - match:
                            prefix: "/api/auth"
                          route:
                            cluster: user_service
                        - match:
                            prefix: "/api/profile"
                          route:
                            cluster: user_service
                        - match:
                            prefix: "/api/catalog"
                          route:
                            cluster: catalog_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: user_service
      connect_timeout: 0.25s
      type: STRICT_DNS # Uses Docker's internal DNS to find the container
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: user_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-service # This matches the container name in docker-compose
                      port_value: 3001
    - name: catalog_service
      connect_timeout: 0.25s
      type: STRICT_DNS # Uses Docker's internal DNS to find the container
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: catalog_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog-service # This matches the container name in docker-compose
                      port_value: 3002
